--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ sudo: false
 addons:
   coverity_scan:
     project:
-      name: "bluerobotics/ardusub"
+      name: "diydrones/ardupilot"
       description: "Build submitted via Travis CI"
-    notification_email: rusty@bluerobotics.com
+    notification_email: andrew-scan@tridgell.net
     build_command_prepend: "make clean"
     build_command:   "make"
     branch_pattern: coverity_scan
@@ -53,7 +53,7 @@ before_cache:
 notifications:
   webhooks:
     urls:
-      - https://webhooks.gitter.im/e/c9c81d7336fdd1025fdd
+      - https://webhooks.gitter.im/e/e5e0b55e353e53945b4b
     on_success: change  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
     on_start: false     # default: false
